Fixed configuration links; Fixed callout dark mode

--- a/src/styles/custom-props.css
+++ b/src/styles/custom-props.css
@@ -51,6 +51,7 @@
   --scrollbar-bg: #353535;
   --get-started-card-bg: #fff;
   --sidebar-link-primary: #353535;
+  --callout-bg: #FAFAFA;
 
   /* Light's on... */
   --dark-theme-display: none;
@@ -94,6 +95,7 @@
   --scrollbar-bg: #353535;
   --get-started-card-bg: #000000;
   --sidebar-link-primary: var(--colors-white0);
+  --callout-bg: #353535;
 
   /* Light's off... */
   --dark-theme-display: flex;
